alignments issues

--- a/src/app/pages/productdetails/productdetails.component.scss
+++ b/src/app/pages/productdetails/productdetails.component.scss
@@ -76,3 +76,14 @@ span{
   }
 }
 }
+.addRemove{
+    i{
+        font-size: 20px;
+    color: #912a70;
+    cursor: pointer;
+    margin: 10px;
+    }
+    strong{
+        font-size: 20px;
+    }
+}
