--- a/src/app/sharepage/navbar/navbar.component.scss
+++ b/src/app/sharepage/navbar/navbar.component.scss
@@ -39,7 +39,7 @@ background-color: #fff!important;
     }
     .fa-search{
         position: absolute;
-        top: 10px;
+        top: 12px;
         right: 18px;
     }
 }
@@ -64,9 +64,4 @@ background-color: #fff!important;
     }
 }
 
-.ng-autocomplete {
-  width:100%;
-  max-width: 600px;
-  display: table;
-  margin: 0 auto;
-}
+
